WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
21060
Range#surroundContents incorrectly throws BAD_BOUNDARYPOINTS_ERR
https://bugs.webkit.org/show_bug.cgi?id=21060
Summary
Range#surroundContents incorrectly throws BAD_BOUNDARYPOINTS_ERR
nanto_vi (TOYAMA Nao)
Reported
2008-09-24 08:53:16 PDT
The surroundContents method of a range can throw BAD_BOUNDARYPOINTS_ERR when the container node of its boundary point is an element node, even if the range contains no partially selected node. See the attachment. Actual: BAD_BOUNDARYPOINTS_ERR is thrown. Expected: The em element is surrounded by the strong element. Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US) AppleWebKit/528+ (KHTML, like Gecko) Version/4.0 Safari/528.1.1 WebKit-
r36766
Attachments
Testcase 1
(697 bytes, text/html)
2008-09-24 08:55 PDT
,
nanto_vi (TOYAMA Nao)
no flags
Details
proposed fix
(5.75 KB, patch)
2008-11-05 03:19 PST
,
Alexey Proskuryakov
mjs
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
nanto_vi (TOYAMA Nao)
Comment 1
2008-09-24 08:55:03 PDT
Created
attachment 23751
[details]
Testcase 1 Firefox and Opera works fine but Safari doesn't.
Alexey Proskuryakov
Comment 2
2008-10-29 03:58:46 PDT
Confirmed with
r37970
.
Alexey Proskuryakov
Comment 3
2008-11-05 03:19:07 PST
Created
attachment 24907
[details]
proposed fix
Maciej Stachowiak
Comment 4
2008-11-05 07:57:10 PST
Comment on
attachment 24907
[details]
proposed fix r=me
Alexey Proskuryakov
Comment 5
2008-11-05 11:19:39 PST
Committed revision 38132.
Lucas Forschler
Comment 6
2019-02-06 09:03:24 PST
Mass moving XML DOM bugs to the "DOM" Component.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug