        Reviewed by Maciej Stachowiak.

https://bugs.webkit.org/show_bug.cgi?id=21060
        Range#surroundContents incorrectly throws BAD_BOUNDARYPOINTS_ERR

        Test: fast/dom/Range/surroundContents-check-boundary-points.html

        * dom/Range.cpp: (WebCore::Range::surroundContents): Fix BAD_BOUNDARYPOINTS_ERR checks.



Canonical link: https://commits.webkit.org/30350@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@38132 268f45cc-cd09-0410-ab3c-d52691b4dbfc